fix footnotes on mobile

--- a/assets/css/_sass/footnotes.scss
+++ b/assets/css/_sass/footnotes.scss
@@ -50,3 +50,7 @@
   line-height: 1.5;
 }
 
+#footnote-popup .reversefootnote {
+  visibility: hidden;
+  position: absolute;
+}
